Temp fix for outline getting stuck on a button on load. Fix tab nav soon

--- a/src/renderer/styles.global.css
+++ b/src/renderer/styles.global.css
@@ -151,3 +151,11 @@ button {
 * {
   box-sizing: border-box;
 }
+
+/* TODO: please fix this urgently, this is so horrible to do...
+   Tab navigation is broken anyway at the moment though, and often
+   a focus outline will get stuck on screen on load.
+*/
+*:focus {
+  outline: none;
+}
